@@ -270,10 +270,9 @@ class GmxTopIterator:
             current_file = self.current_file
 
         try:
-            path = path.name
+            path = os.path.abspath(path.name)
         except AttributeError:
             pass
-
         current_dir = os.path.dirname(current_file)
         dir_path = os.path.join(current_dir, path)
         if os.path.exists(dir_path):
