@@ -1,0 +1,2 @@
+[ atoms ]
+1      H      1    SOL    HW1      1       0.41    1.00800
